<resources>
    <string name="app_name">Weather app</string>
    <string name="favorites_cities">Favorites Cities</string>
    <string name="name_city">Buenos Aires</string>
    <string name="mostly_cloudy">Status</string>
    <string name="buenos_aires">City Name</string>
    <string name="_25">Temp</string>
    <string name="mon">Mon</string>
    <string name="_22_13">22/13</string>
    <string name="tue">Tue</string>
    <string name="_20_15">20/15</string>
    <string name="wed">Wed</string>
    <string name="_23_14">23/14</string>
    <string name="fav_button">FAV</string>
    <string name="home_button">HOME</string>
    <string name="info_button">INFO</string>
    <string name="api_key">a767f9647bfa479c802235339242710</string>
    <string name="infotitle">Information City</string>
    <string name="city_name">City Name</string>
    <string name="city_region">City Region</string>
    <string name="city_country">City Country</string>
    <string name="city_localtime">City LocalTime</string>
    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>

</resources>